--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </header>
     <main>
       <!-- Main content -->
-      <section class="main-section">
+      <section class="hero">
         <div class="container main-container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="order-button" type="button">Order Service</button>
@@ -120,6 +120,36 @@
                 <h3 class="our-team-name">Mark Guerrero</h3>
                 <p class="our-team-job">Product Designer</p>
               </div>
+              <ul class="team-icons">
+                <li class="team-list-icon">
+                  <a href="">
+                    <svg class="team-link-icon" width="40px" height="40px">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <svg width="40px" height="40px">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <svg width="40px" height="40px">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <svg width="40px" height="40px">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="our-team-item">
               <img
@@ -253,6 +283,16 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+
+        <ul class="footer-icon">
+          <li>
+            <button class="button-footer">
+              <svg class="button-icon-footer" width="40px" height="40px">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </button>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
