--- a/index.html
+++ b/index.html
@@ -120,36 +120,38 @@
                 <h3 class="our-team-name">Mark Guerrero</h3>
                 <p class="our-team-job">Product Designer</p>
               </div>
-              <ul class="team-icons">
-                <li class="team-list-icon">
-                  <a href="">
-                    <svg class="team-link-icon" width="40px" height="40px">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a href="">
-                    <svg width="40px" height="40px">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a href="">
-                    <svg width="40px" height="40px">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a href="">
-                    <svg width="40px" height="40px">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div>
+                <ul class="team-icons">
+                  <li class="team-item-icon">
+                    <a class="team-item-link" href="">
+                      <svg class="team-link-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a class="team-item-link" href="">
+                      <svg class="team-link-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a class="team-item-link" href="">
+                      <svg class="team-link-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a class="team-item-link" href="">
+                      <svg class="team-link-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="our-team-item">
               <img
@@ -162,6 +164,38 @@
               <div class="team-text">
                 <h3 class="our-team-name">Tom Ford</h3>
                 <p class="our-team-job">Frontend Developer</p>
+              </div>
+              <div>
+                <ul class="team-icons">
+                  <li class="team-item-icon">
+                    <a class="team-item-link" href="">
+                      <svg class="team-link-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a class="team-item-link" href="">
+                      <svg class="team-link-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a class="team-item-link" href="">
+                      <svg class="team-link-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a class="team-item-link" href="">
+                      <svg class="team-link-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-item">
@@ -176,6 +210,38 @@
                 <h3 class="our-team-name">Camila Garcia</h3>
                 <p class="our-team-job">Marketing</p>
               </div>
+              <div>
+                <ul class="team-icons">
+                  <li class="team-item-icon">
+                    <a class="team-item-link" href="">
+                      <svg class="team-link-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a class="team-item-link" href="">
+                      <svg class="team-link-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a class="team-item-link" href="">
+                      <svg class="team-link-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a class="team-item-link" href="">
+                      <svg class="team-link-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="our-team-item">
               <img
@@ -189,6 +255,38 @@
                 <h3 class="our-team-name">Daniel Wilson</h3>
                 <p class="our-team-job">UI Designer</p>
               </div>
+              <div>
+                <ul class="team-icons">
+                  <li class="team-item-icon">
+                    <a class="team-item-link" href="">
+                      <svg class="team-link-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a class="team-item-link" href="">
+                      <svg class="team-link-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a class="team-item-link" href="">
+                      <svg class="team-link-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item-icon">
+                    <a class="team-item-link" href="">
+                      <svg class="team-link-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
@@ -199,12 +297,19 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/BankingApp.jpg"
-                alt="BankingApp"
-                width="360"
-              />
+              <div class="portfolio-item-text-container">
+                <img
+                  class="portfolio-img"
+                  src="./images/BankingApp.jpg"
+                  alt="BankingApp"
+                  width="360"
+                />
+                <p class="portfolio-item-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-container">
                 <h3 class="portfolio-name">Banking App</h3>
                 <p class="portfolio-target">App</p>
