--- a/index.html
+++ b/index.html
@@ -116,10 +116,8 @@
                 width="264"
                 height="260"
               />
-              <div class="team-text">
-                <h3 class="our-team-name">Mark Guerrero</h3>
-                <p class="our-team-job">Product Designer</p>
-              </div>
+              <h3 class="our-team-name">Mark Guerrero</h3>
+              <p class="our-team-job">Product Designer</p>
               <div>
                 <ul class="team-icons">
                   <li class="team-item-icon">
@@ -297,7 +295,7 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <div class="portfolio-item-text-container">
+              <div class="portfolio-wrap-text-container">
                 <img
                   class="portfolio-img"
                   src="./images/BankingApp.jpg"
@@ -316,60 +314,95 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/CashlessPayment.jpg"
-                alt="CashlessPayment"
-                width="360"
-              />
+              <div class="portfolio-wrap-text-container">
+                <img
+                  class="portfolio-img"
+                  src="./images/CashlessPayment.jpg"
+                  alt="CashlessPayment"
+                  width="360"
+                />
+                <p class="portfolio-item-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-container">
                 <h3 class="portfolio-name">Cashless Payment</h3>
                 <p class="portfolio-target">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/MeditationApp.jpg"
-                alt="MeditationApp"
-                width="360"
-              />
+              <div class="portfolio-wrap-text-container">
+                <img
+                  class="portfolio-img"
+                  src="./images/MeditationApp.jpg"
+                  alt="MeditationApp"
+                  width="360"
+                />
+                <p class="portfolio-item-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-container">
                 <h3 class="portfolio-name">Meditation App</h3>
                 <p class="portfolio-target">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/TaxiService.jpg"
-                alt="TaxiService"
-                width="360"
-              />
+              <div class="portfolio-wrap-text-container">
+                <img
+                  class="portfolio-img"
+                  src="./images/TaxiService.jpg"
+                  alt="TaxiService"
+                  width="360"
+                />
+                <p class="portfolio-item-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-container">
                 <h3 class="portfolio-name">Taxi Service</h3>
                 <p class="portfolio-target">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/ScreenIllustrations.jpg"
-                alt="ScreenIllustrations"
-                width="360"
-              />
+              <div class="portfolio-wrap-text-container">
+                <img
+                  class="portfolio-img"
+                  src="./images/ScreenIllustrations.jpg"
+                  alt="ScreenIllustrations"
+                  width="360"
+                />
+                <p class="portfolio-item-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-container">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
                 <p class="portfolio-target">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/OnlineCourses.jpg"
-                alt="OnlineCourses"
-                width="360"
-              />
+              <div class="portfolio-wrap-text-container">
+                <img
+                  class="portfolio-img"
+                  src="./images/OnlineCourses.jpg"
+                  alt="OnlineCourses"
+                  width="360"
+                />
+                <p class="portfolio-item-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-container">
                 <h3 class="portfolio-name">Online Courses</h3>
                 <p class="portfolio-target">Marketing</p>
@@ -381,23 +414,48 @@
     </main>
     <footer class="footer">
       <div class="container footer-container">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="studio-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-
-        <ul class="footer-icon">
-          <li>
-            <button class="button-footer">
-              <svg class="button-icon-footer" width="40px" height="40px">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </button>
-          </li>
-        </ul>
+        <div class="footer-logo-container">
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="studio-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div>
+          <p class="socail-text">Social media</p>
+          <ul class="social-list">
+            <li class="social-item">
+              <a class="social-item-link" href="">
+                <svg class="social-item-icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-item-link" href="">
+                <svg class="social-item-icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-item-link" href="">
+                <svg class="social-item-icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-item-link" href="">
+                <svg class="social-item-icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
