--- a/index.html
+++ b/index.html
@@ -109,56 +109,62 @@
           <h2 class="our-team-title">Our Team</h2>
           <ul class="our-team-list">
             <li class="our-team-item">
-              <img
-                class="our-team-img"
-                src="./images/MarkGuerrero.jpg"
-                alt="MarkGuerrero"
-                width="264"
-                height="260"
-              />
-              <h3 class="our-team-name">Mark Guerrero</h3>
-              <p class="our-team-job">Product Designer</p>
               <div>
-                <ul class="team-icons">
-                  <li class="team-item-icon">
-                    <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-item-icon">
-                    <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-item-icon">
-                    <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-item-icon">
-                    <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
+                <img
+                  class="our-team-img"
+                  src="./images/MarkGuerrero.jpg"
+                  alt="MarkGuerrero"
+                  width="264"
+                  height="260"
+                />
+              </div>
+              <div class="team-text">
+                <h3 class="our-team-name">Mark Guerrero</h3>
+                <p class="our-team-job">Product Designer</p>
+                <div>
+                  <ul class="team-icons">
+                    <li class="team-item-icon">
+                      <a class="team-item-link" href="">
+                        <svg class="team-link-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-item-icon">
+                      <a class="team-item-link" href="">
+                        <svg class="team-link-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-item-icon">
+                      <a class="team-item-link" href="">
+                        <svg class="team-link-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-item-icon">
+                      <a class="team-item-link" href="">
+                        <svg class="team-link-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="our-team-item">
-              <img
-                class="our-team-img"
-                src="./images/TomFord.jpg"
-                alt="TomFord"
-                width="264"
-                height="260"
-              />
+              <div class="ourteam-img">
+                <img
+                  class="our-team-img"
+                  src="./images/TomFord.jpg"
+                  alt="TomFord"
+                  width="264"
+                  height="260"
+                />
+              </div>
               <div class="team-text">
                 <h3 class="our-team-name">Tom Ford</h3>
                 <p class="our-team-job">Frontend Developer</p>
@@ -428,28 +434,28 @@
           <ul class="social-list">
             <li class="social-item">
               <a class="social-item-link" href="">
-                <svg class="social-item-icon" width="24px" height="24px">
+                <svg class="social-item-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a class="social-item-link" href="">
-                <svg class="social-item-icon" width="24px" height="24px">
+                <svg class="social-item-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a class="social-item-link" href="">
-                <svg class="social-item-icon" width="24px" height="24px">
+                <svg class="social-item-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a class="social-item-link" href="">
-                <svg class="social-item-icon" width="24px" height="24px">
+                <svg class="social-item-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
