--- a/index.html
+++ b/index.html
@@ -105,19 +105,17 @@
       </section>
       <!-- Our Team -->
       <section class="our-team-section">
-        <div class="our-team-container container">
+        <div class="container">
           <h2 class="our-team-title">Our Team</h2>
           <ul class="our-team-list">
             <li class="our-team-item">
-              <div>
-                <img
-                  class="our-team-img"
-                  src="./images/MarkGuerrero.jpg"
-                  alt="MarkGuerrero"
-                  width="264"
-                  height="260"
-                />
-              </div>
+              <img
+                class="our-team-img"
+                src="./images/MarkGuerrero.jpg"
+                alt="MarkGuerrero"
+                width="264"
+                height="260"
+              />
               <div class="team-text">
                 <h3 class="our-team-name">Mark Guerrero</h3>
                 <p class="our-team-job">Product Designer</p>
