--- a/index.html
+++ b/index.html
@@ -69,10 +69,15 @@
       </section>
       <!-- Features -->
       <section class="features-section">
-        <div class="container features-container">
+        <div class="container">
           <h2 class="features-title visually-hidden">Features</h2>
           <ul class="features-list">
             <li class="features-item">
+              <div class="features-container">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-name">Strategy</h3>
               <p class="features-text">
                 Our goal is to identify the business problem to walk away with
@@ -80,6 +85,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-container">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-name">Punctuality</h3>
               <p class="features-text">
                 Bring the key message to the brand's audience for the best price
@@ -87,6 +97,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-container">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-name">Diligence</h3>
               <p class="features-text">
                 Research and confirm brands that present the strongest digital
@@ -94,6 +109,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-container">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-name">Technologies</h3>
               <p class="features-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -122,28 +142,28 @@
                 <ul class="team-icons">
                   <li class="team-item-icon">
                     <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
+                      <svg class="team-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-item-icon">
                     <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
+                      <svg class="team-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-item-icon">
                     <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
+                      <svg class="team-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-item-icon">
                     <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
+                      <svg class="team-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -152,45 +172,41 @@
               </div>
             </li>
             <li class="our-team-item">
-              <div class="ourteam-img">
-                <img
-                  class="our-team-img"
-                  src="./images/TomFord.jpg"
-                  alt="TomFord"
-                  width="264"
-                  height="260"
-                />
-              </div>
+              <img
+                class="our-team-img"
+                src="./images/TomFord.jpg"
+                alt="TomFord"
+                width="264"
+                height="260"
+              />
               <div class="team-text">
                 <h3 class="our-team-name">Tom Ford</h3>
                 <p class="our-team-job">Frontend Developer</p>
-              </div>
-              <div>
                 <ul class="team-icons">
                   <li class="team-item-icon">
                     <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
+                      <svg class="team-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-item-icon">
                     <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
+                      <svg class="team-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-item-icon">
                     <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
+                      <svg class="team-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-item-icon">
                     <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
+                      <svg class="team-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -209,33 +225,31 @@
               <div class="team-text">
                 <h3 class="our-team-name">Camila Garcia</h3>
                 <p class="our-team-job">Marketing</p>
-              </div>
-              <div>
                 <ul class="team-icons">
                   <li class="team-item-icon">
                     <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
+                      <svg class="team-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-item-icon">
                     <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
+                      <svg class="team-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-item-icon">
                     <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
+                      <svg class="team-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-item-icon">
                     <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
+                      <svg class="team-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -254,33 +268,31 @@
               <div class="team-text">
                 <h3 class="our-team-name">Daniel Wilson</h3>
                 <p class="our-team-job">UI Designer</p>
-              </div>
-              <div>
                 <ul class="team-icons">
                   <li class="team-item-icon">
                     <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
+                      <svg class="team-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-item-icon">
                     <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
+                      <svg class="team-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-item-icon">
                     <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
+                      <svg class="team-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-item-icon">
                     <a class="team-item-link" href="">
-                      <svg class="team-link-icon" width="16px" height="16px">
+                      <svg class="team-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
