--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
             >Web<span class="studio-header">Studio</span></a
           >
           <ul class="navigation-list">
-            <li class="navigation-item">
-              <a class="navigation-item-link" href="./index.html">Studio</a>
+            <li class="navigation-item navigation-item-first">
+              <a
+                class="navigation-item-link navigation-item-link-first"
+                href="./index.html"
+                >Studio</a
+              >
             </li>
             <li class="navigation-item">
               <a class="navigation-item-link" href="">Portfolio</a>
