--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             >Web<span class="studio-header">Studio</span></a
           >
           <ul class="navigation-list">
-            <li class="navigation-item navigation-item-first">
+            <li class="navigation-item">
               <a
                 class="navigation-item-link navigation-item-link-first"
                 href="./index.html"
